--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@payloadcms/richtext-lexical": "latest",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
-    "next": "15.1.5",
+    "next": "^15.1.6",
     "payload": "latest",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -33,9 +33,9 @@
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
     "eslint": "^9.16.0",
-    "eslint-config-next": "15.1.5",
+    "eslint-config-next": "^15.1.6",
     "prettier": "^3.4.2",
-    "typescript": "5.7.2"
+    "typescript": "^5.7.3"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
