fix: Use correct path relative to remote system

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -87,5 +87,5 @@ jobs:
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }}
-          script: updatePayload.sh
+          script: ~/bin/updatePayload.sh
         
