fix: Don't add \n to env keys

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,9 +47,9 @@ jobs:
       - name: Create env file
         run: |
           touch .env
-          echo "DATABASE_URI=${{ secrets.DATABASE_URI }}\n" >> .env
-          echo "PAYLOAD_SECRET=${{ secrets.PAYLOAD_SECRET }}\n" >> .env
-          echo "PAYLOAD_PUBLIC_IS_DEVELOPMENT=false\n" >> .env
+          echo "DATABASE_URI=${{ secrets.DATABASE_URI }}" >> .env
+          echo "PAYLOAD_SECRET=${{ secrets.PAYLOAD_SECRET }}" >> .env
+          echo "PAYLOAD_PUBLIC_IS_DEVELOPMENT=false" >> .env
       - name: Load cache
         uses: actions/cache@v4
         with:
