--- a/package.json
+++ b/package.json
@@ -15,33 +15,29 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "latest",
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/richtext-lexical": "latest",
+    "@payloadcms/db-mongodb": "^3.22.0",
+    "@payloadcms/next": "^3.22.0",
+    "@payloadcms/payload-cloud": "^3.22.0",
+    "@payloadcms/richtext-lexical": "^3.22.0",
     "cross-env": "^7.0.3",
-    "graphql": "^16.8.1",
+    "graphql": "^16.10.0",
     "next": "^15.1.6",
-    "payload": "latest",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "sharp": "0.32.6"
+    "payload": "^3.22.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@types/node": "^22.5.4",
-    "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3",
-    "eslint": "^9.16.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "eslint": "^9.19.0",
     "eslint-config-next": "^15.1.6",
     "prettier": "^3.4.2",
     "typescript": "^5.7.3"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
-  },
-  "overrides": {
-    "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3"
   }
 }
