--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,7 +50,7 @@ jobs:
           echo "DATABASE_URI=${{ secrets.DATABASE_URI }}" >> .env
           echo "PAYLOAD_SECRET=${{ secrets.PAYLOAD_SECRET }}" >> .env
           echo "PAYLOAD_PUBLIC_IS_DEVELOPMENT=false" >> .env
-          echo "SERVER_URL=https://cms.2martens.de" >> .env
+          echo "SERVER_URL=${{ secrets.SERVER_URL }}" >> .env
       - name: Load cache
         uses: actions/cache@v4
         with:
