--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,7 +67,7 @@ jobs:
         uses: actions/upload-artifact@v6
         with:
           name: payload-build
-          path: .next/
+          path: ${{ env.BUILD_PATH }}/.next/
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -82,7 +82,7 @@ jobs:
         uses: actions/download-artifact@v7
         with:
           name: payload-build
-          path: .next/
+          path: ${{ env.BUILD_PATH }}/.next/
       - name: Create env file
         run: |
           touch .env
